challenges/06/app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: challenge6
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.24.0-alpine-slim
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pluralsight-svc
  namespace: challenge6
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
