challenges/06/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pluralsight-route
spec:
  parentRefs:
  - name: pluralsight-web
  rules:
  - backendRefs:
    - name: pluralsight-svc
      port: 80
